--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
             android:value="@string/google_maps_key"/>
 
         <service android:name=".LocationService"/>
+        <service android:name=".HydraService"/>
     </application>
 
 </manifest>
